--- a/src/client/components/slide/slide.scss
+++ b/src/client/components/slide/slide.scss
@@ -30,9 +30,13 @@
 .slider-container{
    position: relative;
    z-index: 10;
-  height: 45%;
   margin: auto;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap:40px;
+
+
   
   
   
