--- a/src/client/views/Catalogue/catalogue.scss
+++ b/src/client/views/Catalogue/catalogue.scss
@@ -45,6 +45,8 @@
         }
         .list{
             display:none;
+            opacity: 0;
+            
            
             
               li{
