--- a/src/client/views/layout/Navigation/Navigation.scss
+++ b/src/client/views/layout/Navigation/Navigation.scss
@@ -1,57 +1,102 @@
 .navigation{
    display: flex;
-   justify-content: space-between;
-   height: 71px;
-   align-items: center;
-  
-  
+   width: 100%;
+   padding: 10px 40px;
+   border-bottom: 1px solid #2f2d3b24;
 
-   ul{
-    display: flex;
-    list-style-type: none;
-    padding: 0;
-   font-size: 1.5rem;
-    width:40%;
-
-    li{
-        font-weight: 400;
-        display: block;
-        
-      
-        span{
-           position: relative;
-           display: block;
-        }
-        ::before{
-           content: "";
-           position: absolute;
-           background-color: #6768AB;
-           bottom: 0;
-           left: 0;
-           height: 1px;
-           width: 0%;
-           transition: all 0.4s ease;
-
-        }
-        ::before{
+   li{
+      list-style-type: none;
+   }
+   
+    &__menu{
+      width: 33.333%;
+      display: flex;
+      align-items: center;
+      gap:40px;
+         .menu-title {
+            font-family: "Roboto",sans-serif;
+            font-weight: 400;
+            font-size: 1.4rem;
+            line-height: 2.4rem;
+            position: relative;
+         }
+         .menu-title::before{
+            position: absolute;
+            content:"";
             width: 100%;
-          bottom: 7px;
-          opacity: 0;
-           }
-        :hover::before{
-            width: 100%;
-            bottom: -5px;
-            opacity: 1;
+            bottom: 23px;
+            left: 0;
+            height: 1px;
+            background-color: #6768ab;
+            opacity: 0;
+            transition: all ease 0.4s;
            
-        }
-       :hover{
-        color: #6768AB;
-       }
-      
-        
+         }
+         .menu-title:hover::before{
+            bottom: 0;
+            opacity: 1;
+            color: #6768ab;
+         }
 
+     
+         .menu__list{
+          position: relative;
+         
+         
+         }
+         .list__item{
+            position: absolute;
+            z-index: 10;
+            width: 240px;
+            height: auto;
+            background-color: #ffffff;
+            padding: 30px 20px;
+            left: -20px;
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.5s linear;
+           &--font{
+               padding: 5px 0;
+               font-family: "Roboto",sans-serif;
+               font-weight: 400;
+               font-size: 1.4rem;
+               line-height: 2.4rem;
+             
+            }
+            
+         }
+          .menu__list:hover{
+            .list__item{
+               opacity: 1;
+               visibility: visible;
+             
+            }
+          }
+          .list__item--font:hover{
+            color: #6768ab;
+          }
+          
+
+      }
+      
+      
+
+    
+    &__logo{
+      text-align: center;
+      width: 33.333%;
+    }
+    &__icon{
+      display: flex;
+      text-align: end;
+      justify-content: end;
+      align-items: center;
+      width: 33.333%;
+      font-size: 1.8rem;
+      gap:20px;
 
     }
-    
-   }
+
 }
+
+
