--- a/src/client/components/Categories/Categories.scss
+++ b/src/client/components/Categories/Categories.scss
@@ -64,3 +64,28 @@
 
 }
 
+//Reponsive
+// Mobile <= 740px
+@media only screen and (max-width: 739px) {
+  .categories{
+    &--row{
+     flex-direction: column;
+     align-items: center;  
+     gap: 20px;
+    }
+    &__column2{
+      width: 100%;
+    
+    }
+  }
+   
+  
+}
+
+// Tablet : width >= 740px and width < 1024px
+@media only screen and (min-width: 740px) and (max-width: 1023px) {
+}
+
+// PC : >= 1024px
+@media only screen and (min-width: 1024px) {
+}
