--- a/src/client/sass/_mixins.scss
+++ b/src/client/sass/_mixins.scss
@@ -1,12 +1,9 @@
-@mixin  banner-item {
-    width: 33.333333%;
-    height: 280px;
-    overflow: hidden;
-}
-@mixin banner-item-img {
+
+@mixin img {
     background-size: cover;
     height: 100%;
     transition: 1s ease;
+    
 }
 
 @mixin btn-product-icon {
