--- a/src/client/views/About/about.scss
+++ b/src/client/views/About/about.scss
@@ -1,10 +1,10 @@
 .c-about {
-  width: 100%;
-  min-height: 50vh;
+  max-width: 1250px;
+margin: auto;
   &__banner {
     background: url(../../assets/about/slid0087.jpg) center center;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
   }
   &-title {
     text-align: center;
@@ -32,7 +32,7 @@
     border-radius: 5px;
   }
   &__container {
-    max-width: 1250px;
+    width:100%;
     margin: auto;
 
     .widgets {
@@ -101,7 +101,7 @@
     &-container {
       display: flex;
       justify-content: space-between;
-      max-width: 1250px;
+      width:100%;
       margin: auto;
       gap: 40px;
     }
@@ -151,7 +151,7 @@
   }
 
   &__collections {
-    max-width: 1250px;
+    width:100%;
     text-align: center;
     margin: auto;
     margin-bottom: 40px;
@@ -252,7 +252,7 @@
 }
 //    start quote
 &__quote{
-    max-width: 1250px;
+    width:100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -286,13 +286,14 @@
   }
   }
   &__partners{
-    width: 1250px;
+    width: 100%;
     margin: auto;
     height: 250px;
     margin-bottom: 200px;
     &-content{
      display: flex;
      flex-direction: column;
+     
       img{
            width: 200px;
            height: 134px;
@@ -323,13 +324,20 @@
       }
     }
   }
+  &__picture{
+    display: flex;
+    width: 50%;
+  }
+  .c-about__company-img{
+    width: 50%;
+  }
 
 }
 .item-marginTop{
     margin-top: 50px;
 }
 .swiper {
-  width: 90%;
+  width: 100%;
   height: 100%;
 }
 
@@ -368,4 +376,39 @@
   color:#63626c;
   
   
+}
+//Reponsive
+// Mobile <= 740px
+@media only screen and (max-width: 735px) {
+ .c-about__company{
+   flex-direction: column;
+   &-text{
+    width: 100%;
+   }
+   &-content{
+    column-count: 1;
+   }
+ }
+ .c-about__picture{
+  width: 100%;
+ }
+ .c-about__target-container{
+  flex-direction: column;
+ }
+ .c-about__items{
+  flex-direction: column;
+  
+ }
+ .c-about__item{
+   width: 100%;
+   
+ }
+}
+
+// Tablet : width >= 740px and width < 1024px
+@media only screen and (min-width: 740px) and (max-width: 1023px) {
+}
+
+// PC : >= 1024px
+@media only screen and (min-width: 1024px) {
 }
