--- a/src/client/views/Blog/blog.scss
+++ b/src/client/views/Blog/blog.scss
@@ -5,6 +5,7 @@
       list-style: none;
       gap: 20px;
       margin-bottom: 40px;
+      margin-top: 40px;
        li{
         font-family: 'Roboto',sans-serif;
         font-size: 1.4rem;
@@ -110,4 +111,22 @@
   width: 100%;
   height: 100%;
 
+}
+//Reponsive
+// Mobile <= 740px
+@media only screen and (max-width: 739px) {
+  .c-blog__container{
+    flex-direction: column;
+    &-item{
+      width: 100%;
+    }
+  }
+}
+
+// Tablet : width >= 740px and width < 1024px
+@media only screen and (min-width: 740px) and (max-width: 1023px) {
+}
+
+// PC : >= 1024px
+@media only screen and (min-width: 1024px) {
 }
