--- a/src/client/views/Catalogue/catalogue.scss
+++ b/src/client/views/Catalogue/catalogue.scss
@@ -5,7 +5,7 @@
         width: 20%;
         padding-right: 20px;
         padding-left: 40px;
-  
+        padding-top: 20px;
         
         
         .filter{
@@ -148,17 +148,20 @@
     }
     &__right{
         width: 80%;
+        padding-left: 20px;
+
     }
     &__list{
         width: 100%;
         display: flex;
         flex-wrap: wrap;
+        gap: 20px;
+   
         
     }
     &__item{
-        width: 25%;
-        padding-left: 20px;
-        padding-bottom: 40px;
+        width: 23%;
+      
     }
     &__content{
         box-shadow: 1px 1px 10px lightgray;
@@ -202,4 +205,53 @@
        
      }
 }
+//Reponsive
+// Mobile <= 740px
+@media only screen and (max-width: 739px) {
+   .c-catalogue{
+    flex-direction: column;
+    align-items: flex-end;
+    position: relative;
+    &__item{
+        width: 47%;
+    }
+    &__right{
+        width: 100%;
+    }
+    &__left{
+        width: 100%;
+        
+    }
+  
+   }
 
+
+
+  
+    .icon__filter{
+       padding: 10px;
+       background-color: #6768ab;
+       height: 40px;
+       width: 40px;
+       border-radius: 100%;
+       color: #ffff;
+    }
+    .openfilter__left{
+    position: fixed;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    background-color: #ffffff;
+    height: 100%;
+    width: 80%;
+
+    }
+}
+  
+  // Tablet : width >= 740px and width < 1024px
+  @media only screen and (min-width: 740px) and (max-width: 1023px) {
+  }
+  
+  // PC : >= 1024px
+  @media only screen and (min-width: 1024px) {
+  }
