--- a/src/client/views/Home/Home.scss
+++ b/src/client/views/Home/Home.scss
@@ -8,6 +8,7 @@
     &__newitems{
       height: 510px;
       padding: 0 20px;
+      margin: 80px 0;
     }
     &__category{
       margin: 20px 0;
@@ -31,3 +32,47 @@
        }
     }
   }
+  .info{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    
+    &__icon{
+        font-size: 2.4rem;
+        line-height: 2.4rem;
+        font-weight: 400;
+        color: rgba(47,45,59,0.33);
+    }
+    &--title{
+        font-size: 1.8rem;
+        font-weight: 500;
+        line-height: 2.3rem;
+        color: #2f2d3b;
+        font-family: "Barlow Semi Condensed",sans-serif;
+        
+    }
+    &--description{
+        font-family: "Robto",sans-serif;
+        font-weight: 400;
+        font-size: 1.4rem;
+        line-height: 2.1rem;
+        color: rgba(99,98,108,0.6);
+    }
+}
+//Reponsive
+// Mobile <= 740px
+@media only screen and (max-width: 739px) {
+  .info{
+    flex-direction: column;
+    gap: 30px;
+  }
+}
+
+// Tablet : width >= 740px and width < 1024px
+@media only screen and (min-width: 740px) and (max-width: 1023px) {
+}
+
+// PC : >= 1024px
+@media only screen and (min-width: 1024px) {
+}
+
