--- a/src/client/views/ShopInfo/shopinfo.scss
+++ b/src/client/views/ShopInfo/shopinfo.scss
@@ -1,5 +1,5 @@
 .c-ShopInfo{
-    width: 1250px;
+    max-width: 1250px;
       margin: auto;
     &-header{
        
@@ -70,4 +70,18 @@
 
    } 
 }
+//Reponsive
+// Mobile <= 740px
+@media only screen and (max-width: 739px) {
+  .c-ShopInfo-container__item{
+    width: 45%;
+  }
+}
 
+// Tablet : width >= 740px and width < 1024px
+@media only screen and (min-width: 740px) and (max-width: 1023px) {
+}
+
+// PC : >= 1024px
+@media only screen and (min-width: 1024px) {
+}
