--- a/src/client/views/layout/Footer/footer.scss
+++ b/src/client/views/layout/Footer/footer.scss
@@ -1,6 +1,7 @@
 .footer{
   padding-top: 20px;
    display: flex;
+  
    &__colfirst{
     width: 20%;
    }
@@ -27,5 +28,45 @@
         cursor: pointer;
     }
    }
-  
+   .icon{
+    font-weight:400;
+    font-family:"Roboto",sans-serif;
+    color:#818a91;
+    font-size:2rem;
+    line-height:2rem;
+    display:flex;
+    gap:20px;
 }
+}
+
+
+//Reponsive
+// Mobile <= 740px
+@media only screen and (max-width: 739px) {
+    .footer{
+        flex-direction: column;
+       align-items: center;
+       gap: 50px;
+       &__col,&__colfirst{
+        text-align: center;
+        width: 100%;
+        
+       }
+       .icon{
+        gap:20px;
+        justify-content: center;
+
+
+       }
+      
+     
+    }
+  }
+  
+  // Tablet : width >= 740px and width < 1024px
+  @media only screen and (min-width: 740px) and (max-width: 1023px) {
+  }
+  
+  // PC : >= 1024px
+  @media only screen and (min-width: 1024px) {
+  }
