--- a/src/client/views/layout/Slogan/Slogan.scss
+++ b/src/client/views/layout/Slogan/Slogan.scss
@@ -8,3 +8,18 @@
     color: #6768AB;
    }
 }
+//Reponsive
+// Mobile <= 740px
+@media only screen and (max-width: 739px) {
+    .Slogan {
+        justify-content: center;
+    }
+  }
+  
+  // Tablet : width >= 740px and width < 1024px
+  @media only screen and (min-width: 740px) and (max-width: 1023px) {
+  }
+  
+  // PC : >= 1024px
+  @media only screen and (min-width: 1024px) {
+  }
